hydroflow_datalog/src/snapshots/hydroflow_datalog__tests__join_with_other@surface_graph.snap
---
source: hydroflow_datalog/src/lib.rs
expression: graph.surface_syntax_string()
---
1v1 = merge ();
2v1 = tee ();
3v1 = merge ();
4v1 = tee ();
5v1 = merge ();
6v1 = tee ();
7v1 = source_stream (in1);
8v1 = source_stream (in2);
9v1 = for_each (| v | out . send (v) . unwrap ());
10v1 = join ();
11v1 = map (| kv : ((_ , _ ,) , ((_ , _ ,) , (_ , _ ,))) | (kv . 1 . 0 . 0 , kv . 1 . 0 . 1 ,));
12v1 = map (| v : (_ , _ ,) | ((v . 0 , v . 1 ,) , v));
13v1 = map (| v : (_ , _ ,) | ((v . 1 , v . 0 ,) , v));
14v1 = map (| row : (_ , _ ,) | (row . 0 , row . 1 ,));

(1v1-->2v1);
(3v1-->4v1);
(5v1-->6v1);
(7v1-->1v1);
(8v1-->3v1);
(6v1-->9v1);
(10v1-->11v1);
(12v1-->10v1);
(2v1-->12v1);
(13v1-->10v1);
(4v1-->13v1);
(14v1-->5v1);
(11v1-->14v1);

